# autoware_msgs

./: CMakeLists.txt  package.xml
msg/: ObjectClassification.msg  Shape.msg  TrackedObject.msg  TrackedObjectKinematics.msg  TrackedObjects.msg
